# SpherePoints

./: .gitignore  CMakeLists.txt  README.md  main.cpp  maintest.cpp  sphere_vector.cpp  sphere_vector.h  spherepoints.cpp  spherepoints.h  spherepoints_notes.tex
Sphere Points.xcodeproj/: project.pbxproj
python/: displayPoints.py  points.txt  sphere_vector_test.cpp  spherepoints.py  spherepoints_cg.py  spherepoints_gd.py
test/: CMakeLists.txt  displayPoints.py  points.txt  sphere_vector_test.cpp
